--- a/src/app/views/features/quote/view-quote/view-quote.component.html
+++ b/src/app/views/features/quote/view-quote/view-quote.component.html
@@ -2,19 +2,19 @@
   <div class="col-3">
     <div class="mb-3">
       <p-card>
-        <h3>Gina</h3>
-        <p-divider></p-divider>
-        <span class="p-buttonset flex justify-content-center">
-          <p-button pTooltip="編輯" tooltipPosition="top" icon="pi pi-pencil"
-            styleClass="p-button-rounded p-button-secondary p-button-outlined border-round-left-lg"></p-button>
-          <p-button pTooltip="刪除" tooltipPosition="top" icon="pi pi-trash"
-            styleClass="p-button-rounded p-button-secondary p-button-outlined"></p-button>
-          <p-button pTooltip="複製" tooltipPosition="top" icon="pi pi-copy"
-            styleClass="p-button-rounded p-button-secondary p-button-outlined"></p-button>
-          <p-button pTooltip="轉換" tooltipPosition="top" icon="pi pi-sync"
-            styleClass="p-button-rounded p-button-secondary p-button-outlined border-round-right-lg"></p-button>
-        </span>
         <form [formGroup]="quote_form">
+          <h3>{{quote_form.controls['name'].value}}</h3>
+          <p-divider></p-divider>
+          <span class="p-buttonset flex justify-content-center">
+            <p-button pTooltip="編輯" tooltipPosition="top" icon="pi pi-pencil"
+              styleClass="p-button-rounded p-button-secondary p-button-outlined border-round-left-lg"></p-button>
+            <p-button pTooltip="刪除" tooltipPosition="top" icon="pi pi-trash"
+              styleClass="p-button-rounded p-button-secondary p-button-outlined"></p-button>
+            <p-button pTooltip="複製" tooltipPosition="top" icon="pi pi-copy"
+              styleClass="p-button-rounded p-button-secondary p-button-outlined"></p-button>
+            <p-button pTooltip="轉換" tooltipPosition="top" icon="pi pi-sync"
+              styleClass="p-button-rounded p-button-secondary p-button-outlined border-round-right-lg"></p-button>
+          </span>
           <div class="grid mt-2">
             <div class="col-12 flex justify-content-center">
               <label>編號: </label>
@@ -45,7 +45,7 @@
     <div class="mb-3">
       <p-card>
         <span class="p-buttonset flex justify-content-center">
-          <p-button label="不明確" styleClass="p-button-secondary border-round-left-3xl"></p-button>
+          <p-button label="草稿" styleClass="p-button-secondary border-round-left-3xl"></p-button>
           <p-button label="新線索" styleClass="p-button-secondary"></p-button>
           <p-button label="評估中" styleClass="p-button-secondary"></p-button>
           <p-button label="發展中" styleClass="p-button-secondary"></p-button>
@@ -58,24 +58,259 @@
       </p-card>
     </div>
     <div>
-
       <p-card>
-        <p-tabView>
-          <p-tabPanel header="詳細資料">
-
-          </p-tabPanel>
-          <p-tabPanel header="活動">
-            <h3>(待完成)</h3>
-          </p-tabPanel>
-        </p-tabView>
+        <form [formGroup]="quote_form">
+          <p-tabView>
+            <p-tabPanel header="相關">
+              <p-table [rowsPerPageOptions]="[5, 10, 15]" [value]="GetAllProduct" [lazy]="true"
+                (onLazyLoad)="loadPostsLazy($event)" [loading]="loading">
+                <ng-template pTemplate="caption">
+                  <div class="flex justify-content-between">
+                    <div class="justify-content-start mt-2">
+                      <label>報價條列項目 {{GetAllProduct.length}}</label>
+                    </div>
+                    <div class="justify-content-end">
+                      <p-button icon="pi pi-plus" pTooltip="新增產品" (click)="addProduct()" tooltipPosition="top"
+                        styleClass="p-button-text"></p-button>
+                      <p-button icon="pi pi-pencil" pTooltip="編輯所有報價產品" (click)="editProduct()" tooltipPosition="top"
+                        styleClass="p-button-text"></p-button>
+                    </div>
+                  </div>
+                </ng-template>
+                <ng-template pTemplate="header">
+                  <tr>
+                    <th>名稱</th>
+                    <th>銷售價格</th>
+                    <th>數量</th>
+                    <th>小計</th>
+                    <th></th>
+                  </tr>
+                </ng-template>
+                <ng-template pTemplate="body" let-product>
+                  <tr>
+                    <td>{{ product.name }}</td>
+                    <td>{{ product.price }}</td>
+                    <td>{{ product.quantity }}</td>
+                    <td>{{ product.subtotal }}</td>
+                    <td class="icon-align-right">
+                      <p-button icon="pi pi-pencil" pTooltip="編輯" tooltipPosition="top"
+                        styleClass="p-button-rounded p-button-secondary p-button-text"></p-button>
+                      <p-button icon="pi pi-trash" styleClass="p-button-rounded p-button-secondary p-button-text"
+                        pTooltip="刪除" tooltipPosition="top"></p-button>
+                    </td>
+                  </tr>
+                </ng-template>
+              </p-table>
+            </p-tabPanel>
+            <p-tabPanel header="詳細資料">
+              <div class="grid">
+                <div class="col-6">
+                  <div class="field">
+                    <label>編號</label>
+                    <br>
+                    <label class="mt-2 ml-2 disable">{{(quote_form.controls['code'].value)}}</label>
+                  </div>
+                </div>
+                <div class="col-6">
+                  <div class="field">
+                    <label><span class="required-star">*</span>名稱</label>
+                    <input pInputText formControlName="name"
+                      [ngClass]="{'ng-dirty':quote_form.controls['name'].hasError && quote_form.controls['name'].touched}">
+                  </div>
+                </div>
+                <div class="col-6">
+                  <div class="field">
+                    <label><span class="required-star">*</span>商機</label>
+                    <p-dropdown placeholder="搜尋商機" [options]="GetAllOpportunity" [formControlName]="'opportunity_id'"
+                      [(ngModel)]="selectedOpportunity_id" [filter]="true" filterBy="label" [showClear]="true"
+                      (ngModelChange)="selectedOpportunity()"
+                      [ngClass]="{'ng-dirty':quote_form.controls['opportunity_id'].hasError && quote_form.controls['opportunity_id'].touched}"></p-dropdown>
+                  </div>
+                </div>
+                <div class="col-6">
+                  <div class="field">
+                    <label>狀態</label>
+                    <p-dropdown placeholder="請選擇" [disabled]="true" appendTo="body" [options]="status"
+                      formControlName="status" optionLabel="name" (onChange)="onStatusChange($event)"
+                      [(ngModel)]="selectedStatus"></p-dropdown>
+                  </div>
+                </div>
+                <div class="col-6">
+                  <div class="field">
+                    <label>同步到商機</label>
+                    <br>
+                    <p-checkbox formControlName="is_syncing" value="is_syncing" [binary]="true"></p-checkbox>
+                  </div>
+                </div>
+                <div class="col-12">
+                  <div class="field">
+                    <label>描述</label>
+                    <textarea [rows]="5" pInputTextarea formControlName="description"></textarea>
+                  </div>
+                </div>
+                <div class="col-6">
+                  <div class="field">
+                    <label>到期日期</label>
+                    <p-calendar [appendTo]="'body'" dateFormat="yy-mm-dd" [showButtonBar]="true"
+                      formControlName="expiration_date" [readonlyInput]="true"></p-calendar>
+                  </div>
+                </div>
+                <div class="col-6">
+                  <div class="field">
+                    <label>小計</label>
+                    <br>
+                    <label class="mt-2 ml-2">{{quote_form.controls['subtotal'].value}}</label>
+                    <!--<p-inputNumber  formControlName="subtotal" mode="currency" currency="USD" locale="en-US" [minFractionDigits]="2"> </p-inputNumber>-->
+                  </div>
+                </div>
+                <div class="col-6">
+                  <div class="field">
+                    <label>稅額</label>
+                    <br>
+                    <p-inputNumber class="w-full" formControlName="tax" mode="currency" currency="TWD" locale="en-US"
+                      [minFractionDigits]="2" [min]="0"></p-inputNumber>
+                  </div>
+                </div>
+                <div class="col-6">
+                  <div class="field">
+                    <label>折扣</label>
+                    <br>
+                    <label class="mt-2 ml-2">{{quote_form.controls['discount'].value}}</label>
+                  </div>
+                </div>
+                <div class="col-6">
+                  <div class="field">
+                    <label>運輸處理</label>
+                    <br>
+                    <p-inputNumber class="w-full" formControlName="shipping_and_handling" suffix="%"
+                      [minFractionDigits]="2" [min]="0" [max]="100"></p-inputNumber>
+                  </div>
+                </div>
+                <div class="col-6">
+                  <div class="field">
+                    <label>總計</label>
+                    <br>
+                    <!-- <input type="number" class="form-control" formControlName="total_price" [value]="getNumber(quote_form.controls['total_price'].value)" /> -->
+                    <label class="mt-2 ml-2">{{quote_form.controls['total_price'].value}}</label>
+                  </div>
+                </div>
+                <div class="col-6">
+                  <label>建立者：</label>
+                  <br>
+                  <div class="mt-3 field">
+                    <label class="disable">{{(quote_form.controls['created_by'].value)}}</label>
+                    <label class="ml-2 disable">{{(quote_form.controls['created_at'].value)}}</label>
+                  </div>
+                </div>
+                <div class="col-6">
+                  <label>上次修改者：</label>
+                  <br>
+                  <div class="mt-3 field">
+                    <label class="disable">{{(quote_form.controls['updated_by'].value)}}</label>
+                    <label class="ml-2 disable">{{(quote_form.controls['updated_at'].value)}}</label>
+                  </div>
+                </div>
+              </div>
+              <div class="flex justify-content-end">
+                <p-button label="儲存" (click)="patchQuoteRequest(q_id)"
+                  styleClass="p-button-outlined p-button-info"></p-button>
+                <p-button label="取消" styleClass="p-button-secondary ml-1"></p-button>
+              </div>
+            </p-tabPanel>
+          </p-tabView>
+        </form>
       </p-card>
     </div>
   </div>
+
   <div class="col-3">
     <p-card>
-      <h3>拜訪紀錄</h3>
+      <h3>活動</h3>
       <p-divider></p-divider>
       <h3>(待完成)</h3>
     </p-card>
   </div>
 </div>
+<!-- 新增產品dialog -->
+<p-dialog [(visible)]="add" header=新增產品 [modal]="true">
+  <p-table [value]="GetAllProduct" [lazy]="true" (onLazyLoad)="loadPostsLazy($event)" [loading]="loading">
+    <ng-template pTemplate="header">
+      <tr>
+        <th style="width: 4rem">
+          <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
+        </th>
+        <th pSortableColumn="name">名稱
+          <p-sortIcon field="name"></p-sortIcon>
+        </th>
+        <th pSortableColumn="code">識別碼
+          <p-sortIcon field="code"></p-sortIcon>
+        </th>
+        <th pSortableColumn="price">價格
+          <p-sortIcon field="price"></p-sortIcon>
+        </th>
+        <th pSortableColumn="description">描述
+          <p-sortIcon field="description"></p-sortIcon>
+        </th>
+        <!-- <th>系列</th> -->
+        <th></th>
+      </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-product>
+      <tr>
+        <td>
+          <p-tableCheckbox [value]="product"></p-tableCheckbox>
+        </td>
+        <td>{{ product.name }}</td>
+        <td>{{ product.code }}</td>
+        <td>{{ product.price }}</td>
+        <td>{{ product.description }}</td>
+        <!-- <td>{{ product.series }}</td> -->
+      </tr>
+    </ng-template>
+    <ng-template pTemplate="summary">
+      <div class="flex justify-content-end">
+        <p-button label="取消" (click)="add=false" styleClass="p-button-secondary"></p-button>
+        <p-button label="下一步" (click)="edit=true" (click)="add=false" styleClass="p-button-info ml-1"></p-button>
+      </div>
+    </ng-template>
+  </p-table>
+</p-dialog>
+
+<!-- 編輯所有報價產品dialog -->
+<form [formGroup]="product_form">
+  <p-dialog [(visible)]="edit" header=編輯所有報價產品 [modal]="true">
+    <p-table [value]="GetAllProduct" [lazy]="true" (onLazyLoad)="loadPostsLazy($event)" [loading]="loading">
+      <ng-template pTemplate="header">
+        <tr>
+          <th>名稱</th>
+          <th><span class="required-star">*</span>價格</th>
+          <th><span class="required-star">*</span>數量</th>
+          <th><span class="required-star">*</span>折扣</th>
+          <th></th>
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="body" let-product>
+        <tr>
+          <td>{{ product.name }}</td>
+          <td><p-inputNumber inputId="integeronly" mode="currency" currency="TWD" locale="en-tw"
+              [min]="0" formControlName="price"
+              [ngClass]="{'ng-dirty':product_form.controls['price'].hasError && product_form.controls['price'].touched}"></p-inputNumber></td>
+          <td><p-inputNumber inputId="integeronly" [min]="0" formControlName="quantity"
+            [ngClass]="{'ng-dirty':product_form.controls['quantity'].hasError && product_form.controls['quantity'].touched}"></p-inputNumber></td>
+          <td><p-inputNumber inputId="integeronly" [min]="0" [max]="100" suffix="%" formControlName="discount"
+            [ngClass]="{'ng-dirty':product_form.controls['discount'].hasError && product_form.controls['discount'].touched}"></p-inputNumber></td>
+          <td class="icon-align-right">
+            <p-button icon="pi pi-trash" styleClass="p-button-rounded p-button-secondary p-button-text" pTooltip="刪除"
+              tooltipPosition="top"></p-button>
+          </td>
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="summary">
+        <div class="flex justify-content-end">
+          <p-button label="取消" (click)="edit=false" styleClass="p-button-secondary"></p-button>
+          <p-button label="儲存" styleClass="p-button-info ml-1"></p-button>
+        </div>
+      </ng-template>
+    </p-table>
+  </p-dialog>
+</form>
