--- a/src/app/views/features/lead/view-lead/view-lead.component.scss
+++ b/src/app/views/features/lead/view-lead/view-lead.component.scss
@@ -1,1 +1,60 @@
 @import 'src/app/app.component.scss';
+
+button {
+  background: #fff;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  display: flex;
+  font-size: 15px;
+  width: 90px;
+  text-transform: uppercase;
+  cursor: default;
+  transform: skew(-21deg);
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  overflow: hidden;
+  margin-left:10px ;
+}
+
+.first-button{
+  transform: skew(-21deg);
+}
+
+.can-check {
+  box-shadow: 6px 6px 12px #c5c5c5,
+  -6px -6px 12px #ffffff;
+}
+
+.span {
+  display: inline-block;
+  transform: skew(21deg);
+}
+
+button::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 100%;
+  left: 0;
+  background: rgb(20, 20, 20);
+  opacity: 0;
+  z-index: -1;
+  transition: all 0.5s;
+}
+
+.has-check:active {
+  transform: scale(1.05), skew(-21deg);
+  box-shadow: inset 3px 3px 6px #b5b5b5,
+  inset -3px -3px 6px #ffffff;
+}
+
+//button:hover {
+//  color: #fff;
+//}
+//
+//button:hover::before {
+//  left: 0;
+//  right: 0;
+//  opacity: 1;
+//}
