--- a/src/app/views/components/toolbar/toolbar.component.scss
+++ b/src/app/views/components/toolbar/toolbar.component.scss
@@ -21,10 +21,19 @@ a {
     background: #2E5C6E;
     border: none;
     border-radius: 0;
+    transition: all 0.3s ease-in-out;
 
     .p-menubar-root-list .p-menuitem .p-menuitem-link {
+      transition: all 0.3s ease-in-out;
       .p-menuitem-active:not(.p-disabled):hover {
-        background: #356d86;
+        background: #2E5C6E;
+      }
+      &:hover {
+        transform: translateY(-3px);
+      }
+
+      &:active {
+        transform: translateY(0);
       }
 
       .p-submenu-icon {
@@ -53,18 +62,18 @@ a {
       &:not(.p-disabled):hover .p-submenu-icon,
       &:not(.p-disabled):hover .p-menuitem-text {
         color: #FFFFFB;
-        background: #356d86;
+        background: #2E5C6E;
       }
     }
 
     .p-float-label input.p-filled ~ label {
-      background: #356d86;
+      background: #2E5C6E;
     }
 
     input {
       border-radius: 20px;
       border: none;
-      background: #356d86;
+      background: #2E5C6E;
       color: #FFFFFB;
 
       &:focus {
@@ -79,7 +88,7 @@ a {
     // 右邊icon點擊無外框
     .p-button.p-button-secondary:enabled {
       &:hover {
-        background: #356d86;
+        background: #2E5C6E;
       }
 
       &:focus {
@@ -90,7 +99,7 @@ a {
 
   .p-menubar .p-menuitem.p-menuitem-active > .p-menuitem-link,
   .p-menubar .p-menubar-root-list > .p-menuitem.p-menuitem-active > .p-menuitem-link, .p-menubar .p-menubar-root-list > .p-menuitem.p-menuitem-active > .p-menuitem-link:not(.p-disabled):hover {
-    background: #356d86;
+    background: #2E5C6E;
   }
 }
 
