feat: 調整 toolbar 高度為80px

--- a/src/app/views/components/toolbar/toolbar.component.html
+++ b/src/app/views/components/toolbar/toolbar.component.html
@@ -1,4 +1,4 @@
-<p-menubar [model]="items">
+<p-menubar [style]="{'height':'80px'}" [model]="items">
   <ng-template pTemplate="start"></ng-template>
   <ng-template pTemplate="end">
     <span class="p-input-icon-left mr-4">
