--- a/src/app/views/components/dashboard/dashboard.component.html
+++ b/src/app/views/components/dashboard/dashboard.component.html
@@ -1,1 +1,151 @@
-<p>dashboard works!</p>
+<div class="flex justify-content-center">
+  <div class="col-10">
+    <div class="tiles">
+      <article class="tile" routerLink="/main/account">
+        <div class="tile-header">
+          <h3>
+            <span>帳戶</span>
+            <span>UrkEnergo LTD.</span>
+          </h3>
+        </div>
+        <a>
+          <span>Go to service</span>
+          <span class="pi pi-users"></span>
+        </a>
+      </article>
+      <article class="tile" routerLink="/main/contact">
+        <div class="tile-header">
+          <h3>
+            <span>聯絡人</span>
+            <span>Gazprom UA</span>
+          </h3>
+        </div>
+        <a>
+          <span>Go to service</span>
+          <span class="pi pi-user"></span>
+        </a>
+      </article>
+      <article class="tile" routerLink="/main/lead">
+        <div class="tile-header">
+          <h3>
+            <span>線索</span>
+            <span>Kharkov 62 str.</span>
+          </h3>
+        </div>
+        <a>
+          <span>Go to service</span>
+          <span class="pi pi-briefcase"></span>
+        </a>
+      </article>
+      <article class="tile" routerLink="/main/opportunity">
+        <div class="tile-header">
+          <h3>
+            <span>商機</span>
+            <span>Kharkov 62 str.</span>
+          </h3>
+        </div>
+        <a>
+          <span>Go to service</span>
+          <span class="pi pi-dollar"></span>
+        </a>
+      </article>
+      <article class="tile" routerLink="/main/product">
+        <div class="tile-header">
+          <h3>
+            <span>商品/服務</span>
+            <span>Kharkov 62 str.</span>
+          </h3>
+        </div>
+        <a>
+          <span>Go to service</span>
+          <span class="pi pi-box"></span>
+        </a>
+      </article>
+      <article class="tile" routerLink="/main/quote">
+        <div class="tile-header">
+          <h3>
+            <span>報價</span>
+            <span>Kharkov 62 str.</span>
+          </h3>
+        </div>
+        <a>
+          <span>Go to service</span>
+          <span class="pi pi-file"></span>
+        </a>
+      </article>
+      <article class="tile" routerLink="/main/contract">
+        <div class="tile-header">
+          <h3>
+            <span>契約</span>
+            <span>Kharkov 62 str.</span>
+          </h3>
+        </div>
+        <a>
+          <span>Go to service</span>
+          <span class="pi pi-file-edit"></span>
+        </a>
+      </article>
+      <article class="tile" routerLink="/main/order">
+        <div class="tile-header">
+          <h3>
+            <span>訂單</span>
+            <span>Kharkov 62 str.</span>
+          </h3>
+        </div>
+        <a>
+          <span>Go to service</span>
+          <span class="pi pi-shopping-cart"></span>
+        </a>
+      </article>
+      <article class="tile" routerLink="/main/campaign">
+        <div class="tile-header">
+          <h3>
+            <span>行銷活動</span>
+            <span>Kharkov 62 str.</span>
+          </h3>
+        </div>
+        <a>
+          <span>Go to service</span>
+          <span class="pi pi-flag"></span>
+        </a>
+      </article>
+      <article class="tile" routerLink="/main/forecasting">
+        <div class="tile-header">
+          <h3>
+            <span>預測</span>
+            <span>Kharkov 62 str.</span>
+          </h3>
+        </div>
+        <a>
+          <span>Go to service</span>
+          <span class="pi pi-chart-line"></span>
+        </a>
+      </article>
+      <article class="tile" routerLink="/main/report">
+        <div class="tile-header">
+          <h3>
+            <span>報告</span>
+            <span>Kharkov 62 str.</span>
+          </h3>
+        </div>
+        <a>
+          <span>Go to service</span>
+          <span class="pi pi-chart-bar"></span>
+        </a>
+      </article>
+      <article class="tile" routerLink="/main/event">
+        <div class="tile-header">
+          <h3>
+            <span>行事曆</span>
+            <span>Kharkov 62 str.</span>
+          </h3>
+        </div>
+        <a>
+          <span>Go to service</span>
+          <span class="pi pi-calendar"></span>
+        </a>
+      </article>
+    </div>
+  </div>
+</div>
+
