--- a/src/app/views/components/toolbar/toolbar.component.html
+++ b/src/app/views/components/toolbar/toolbar.component.html
@@ -1,14 +1,14 @@
-<p-menubar [style]="{'height':'80px'}" [model]="items">
+<p-menubar [style]="{'height':'70px'}" [model]="items">
   <ng-template pTemplate="start"></ng-template>
   <ng-template pTemplate="end">
-    <span class="p-input-icon-left mr-4">
-        <i class="text-white pi pi-search ml-2"></i>
-        <input type="text"  pInputText/>
+    <span class="container-input">
+      <input type="text" placeholder="搜尋" name="text" class="input">
+      <i class="pi pi-search"></i>
     </span>
     <p-button pTooltip="行事曆" tooltipPosition="bottom" icon="pi pi-calendar" routerLink="/main/event"
-              styleClass="text-white p-button-rounded p-button-secondary p-button-text p-button-lg mr-2"></p-button>
+                styleClass="text-white p-button-rounded p-button-secondary p-button-text p-button-lg mr-2"></p-button>
     <p-button pTooltip="帳號" tooltipPosition="bottom" icon="pi pi-user" (click)="menu.toggle($event)"
-              styleClass="text-white p-button-rounded p-button-secondary p-button-text p-button-lg mr-3"></p-button>
+                styleClass="text-white p-button-rounded p-button-secondary p-button-text p-button-lg mr-3"></p-button>
   </ng-template>
 </p-menubar>
 <p-menu #menu [model]="account" [popup]="true"></p-menu>
