fix: 關鍵字搜索

--- a/src/app/views/features/quote/quote.component.html
+++ b/src/app/views/features/quote/quote.component.html
@@ -15,7 +15,7 @@
           <div class="flex">
             <span class="p-input-icon-left ml-auto">
               <td><input type="text" [(ngModel)]="filterText" (input)="filterquotes()" pInputText
-                  placeholder="輸入關鍵字"></td>
+                  placeholder="關鍵字搜索"></td>
             </span>
           </div>
         </ng-template>
