--- a/src/app/views/features/contact/contact.component.html
+++ b/src/app/views/features/contact/contact.component.html
@@ -14,7 +14,7 @@
           <div class="flex">
             <span class="p-input-icon-left ml-auto">
               <td><input type="text" [(ngModel)]="filterText" (input)="filtercontacts()" pInputText
-                         placeholder="輸入關鍵字"></td>
+                         placeholder="關鍵字搜索"></td>
             </span>
           </div>
         </ng-template>
