--- a/src/app/views/features/quote/view-quote/view-quote.component.html
+++ b/src/app/views/features/quote/view-quote/view-quote.component.html
@@ -63,7 +63,7 @@
           <p-tabView>
             <p-tabPanel header="相關">
               <p-table [rowsPerPageOptions]="[5, 10, 15]" [value]="GetAllProduct" [lazy]="true"
-                (onLazyLoad)="loadPostsLazy($event)" [loading]="loading">
+                (onLazyLoad)="loadPostsLazy($event)" >
                 <ng-template pTemplate="caption">
                   <div class="flex justify-content-between">
                     <div class="justify-content-start mt-2">
@@ -233,7 +233,7 @@
 </div>
 <!-- 新增產品dialog -->
 <p-dialog [(visible)]="add" header=新增產品 [modal]="true">
-  <p-table [value]="GetAllProduct" [lazy]="true" (onLazyLoad)="loadPostsLazy($event)" [loading]="loading">
+  <p-table [value]="GetAllProduct" [lazy]="true" (onLazyLoad)="loadPostsLazy($event)" >
     <ng-template pTemplate="header">
       <tr>
         <th style="width: 4rem">
@@ -279,7 +279,7 @@
 <!-- 編輯所有報價產品dialog -->
 <form [formGroup]="product_form">
   <p-dialog [(visible)]="edit" header=編輯所有報價產品 [modal]="true">
-    <p-table [value]="GetAllProduct" [lazy]="true" (onLazyLoad)="loadPostsLazy($event)" [loading]="loading">
+    <p-table [value]="GetAllProduct" [lazy]="true" (onLazyLoad)="loadPostsLazy($event)" >
       <ng-template pTemplate="header">
         <tr>
           <th>名稱</th>
