--- a/src/app/views/features/event/event.component.scss
+++ b/src/app/views/features/event/event.component.scss
@@ -1,5 +1,8 @@
 @import 'src/app/app.component.scss';
-:host ::ng-deep .fc-toolbar-title {
+:host ::ng-deep  .fc.fc-theme-standard .fc-toolbar .fc-button{
+  font-family: "Verdana", sans-serif;
+};
+::ng-deep .fc-toolbar-title {
   font-family: "Verdana", sans-serif;
   font-size: 24px;
   color: #444b5b;
